commit translated contents

--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,13 +1,13 @@
 ---
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
-ms.date: 06/11/2020
-ms.openlocfilehash: a9322186d3251e2fab9e4c8262c584387e506db1
-ms.sourcegitcommit: 1eae045421d9ea2bfc82aaccfa5b1ff1b8c9e0e4
+ms.date: 06/23/2020
+ms.openlocfilehash: 305477d3b7cf336af9ccefbd3cc504a4edcd655d
+ms.sourcegitcommit: dc2feef0794cf41dbac1451a13b8183258566c0e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 06/16/2020
-ms.locfileid: "84803235"
+ms.lasthandoff: 06/24/2020
+ms.locfileid: "85325232"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
@@ -19,8 +19,11 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 - [Estensioni: modifiche dei riferimenti al pacchetto che interessano alcuni pacchetti NuGet](#extensions-package-reference-changes-affecting-some-nuget-packages)
 - [HTTP: HttpClient istanze create dai codici di stato IHttpClientFactory log Integer](#http-httpclient-instances-created-by-ihttpclientfactory-log-integer-status-codes)
 - [Tipi HTTP: gheppio e IIS BadHttpRequestException contrassegnati come obsoleti e sostituiti](#http-kestrel-and-iis-badhttprequestexception-types-marked-obsolete-and-replaced)
+- [HttpSys: rinegoziazione certificato client disabilitata per impostazione predefinita](#httpsys-client-certificate-renegotiation-disabled-by-default)
+- [IIS: vengono mantenute le stringhe di query del middleware UrlRewrite](#iis-urlrewrite-middleware-query-strings-are-preserved)
 - [Gheppio: modifiche di configurazione in fase di esecuzione rilevate per impostazione predefinita](#kestrel-configuration-changes-at-run-time-detected-by-default)
 - [Gheppio: versioni del protocollo TLS supportate predefinite modificate](#kestrel-default-supported-tls-protocol-versions-changed)
+- [Gheppio: HTTP/2 disabilitato su TLS in versioni incompatibili di Windows](#kestrel-http2-disabled-over-tls-on-incompatible-windows-versions)
 - [Localizzazione: API "Pubternal" rimosse](#localization-pubternal-apis-removed)
 - [Localizzazione: classe ResourceManagerWithCultureStringLocalizer e membro dell'interfaccia WithCulture rimossi](#localization-resourcemanagerwithculturestringlocalizer-class-and-withculture-interface-member-removed)
 - [SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
@@ -44,11 +47,23 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ***
 
+[!INCLUDE[HttpSys: Client certificate renegotiation disabled by default](~/includes/core-changes/aspnetcore/5.0/httpsys-client-certificate-renegotiation-disabled-by-default.md)]
+
+***
+
+[!INCLUDE[IIS: UrlRewrite middleware query strings are preserved](~/includes/core-changes/aspnetcore/5.0/iis-urlrewrite-middleware-query-strings-are-preserved.md)]
+
+***
+
 [!INCLUDE[Kestrel: Configuration changes at run time detected by default](~/includes/core-changes/aspnetcore/5.0/kestrel-configuration-changes-at-run-time-detected-by-default.md)]
 
 ***
 
 [!INCLUDE[Kestrel: Default supported TLS protocol versions changed](~/includes/core-changes/aspnetcore/5.0/kestrel-default-supported-tls-protocol-versions-changed.md)]
+
+***
+
+[!INCLUDE[Kestrel: HTTP/2 disabled over TLS on incompatible Windows versions](~/includes/core-changes/aspnetcore/5.0/kestrel-disables-http2-over-tls.md)]
 
 ***
 
@@ -102,7 +117,7 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ***
 
-## <a name="windows-forms"></a>Windows Forms
+## <a name="windows-forms"></a>Windows Form
 
 - [Rimossi controlli barra di stato](#removed-status-bar-controls)
 - [I metodi WinForms ora generano ArgumentException](#winforms-methods-now-throw-argumentexception)
