--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,32 +1,35 @@
 ---
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
-ms.date: 06/11/2020
-ms.openlocfilehash: a9322186d3251e2fab9e4c8262c584387e506db1
-ms.sourcegitcommit: 1eae045421d9ea2bfc82aaccfa5b1ff1b8c9e0e4
+ms.date: 06/23/2020
+ms.openlocfilehash: 305477d3b7cf336af9ccefbd3cc504a4edcd655d
+ms.sourcegitcommit: dc2feef0794cf41dbac1451a13b8183258566c0e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 06/16/2020
-ms.locfileid: "84803235"
+ms.lasthandoff: 06/24/2020
+ms.locfileid: "85325232"
 ---
-# <a name="breaking-changes-for-migration-from-version-31-to-50"></a><span data-ttu-id="22c98-103">Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0</span><span class="sxs-lookup"><span data-stu-id="22c98-103">Breaking changes for migration from version 3.1 to 5.0</span></span>
+# <a name="breaking-changes-for-migration-from-version-31-to-50"></a><span data-ttu-id="2a2b6-103">Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0</span><span class="sxs-lookup"><span data-stu-id="2a2b6-103">Breaking changes for migration from version 3.1 to 5.0</span></span>
 
-<span data-ttu-id="22c98-104">Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Core alla versione 5,0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="22c98-104">If you're migrating from version 3.1 of .NET Core, ASP.NET Core, or EF Core to version 5.0 of .NET, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
+<span data-ttu-id="2a2b6-104">Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Core alla versione 5,0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="2a2b6-104">If you're migrating from version 3.1 of .NET Core, ASP.NET Core, or EF Core to version 5.0 of .NET, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
 
-## <a name="aspnet-core"></a><span data-ttu-id="22c98-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="22c98-105">ASP.NET Core</span></span>
+## <a name="aspnet-core"></a><span data-ttu-id="2a2b6-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="2a2b6-105">ASP.NET Core</span></span>
 
-- [<span data-ttu-id="22c98-106">Azure: pacchetti di integrazione di Azure con prefisso Microsoft rimossi</span><span class="sxs-lookup"><span data-stu-id="22c98-106">Azure: Microsoft-prefixed Azure integration packages removed</span></span>](#azure-microsoft-prefixed-azure-integration-packages-removed)
-- [<span data-ttu-id="22c98-107">Estensioni: modifiche dei riferimenti al pacchetto che interessano alcuni pacchetti NuGet</span><span class="sxs-lookup"><span data-stu-id="22c98-107">Extensions: Package reference changes affecting some NuGet packages</span></span>](#extensions-package-reference-changes-affecting-some-nuget-packages)
-- [<span data-ttu-id="22c98-108">HTTP: HttpClient istanze create dai codici di stato IHttpClientFactory log Integer</span><span class="sxs-lookup"><span data-stu-id="22c98-108">HTTP: HttpClient instances created by IHttpClientFactory log integer status codes</span></span>](#http-httpclient-instances-created-by-ihttpclientfactory-log-integer-status-codes)
-- [<span data-ttu-id="22c98-109">Tipi HTTP: gheppio e IIS BadHttpRequestException contrassegnati come obsoleti e sostituiti</span><span class="sxs-lookup"><span data-stu-id="22c98-109">HTTP: Kestrel and IIS BadHttpRequestException types marked obsolete and replaced</span></span>](#http-kestrel-and-iis-badhttprequestexception-types-marked-obsolete-and-replaced)
-- [<span data-ttu-id="22c98-110">Gheppio: modifiche di configurazione in fase di esecuzione rilevate per impostazione predefinita</span><span class="sxs-lookup"><span data-stu-id="22c98-110">Kestrel: Configuration changes at run time detected by default</span></span>](#kestrel-configuration-changes-at-run-time-detected-by-default)
-- [<span data-ttu-id="22c98-111">Gheppio: versioni del protocollo TLS supportate predefinite modificate</span><span class="sxs-lookup"><span data-stu-id="22c98-111">Kestrel: Default supported TLS protocol versions changed</span></span>](#kestrel-default-supported-tls-protocol-versions-changed)
-- [<span data-ttu-id="22c98-112">Localizzazione: API "Pubternal" rimosse</span><span class="sxs-lookup"><span data-stu-id="22c98-112">Localization: "Pubternal" APIs removed</span></span>](#localization-pubternal-apis-removed)
-- [<span data-ttu-id="22c98-113">Localizzazione: classe ResourceManagerWithCultureStringLocalizer e membro dell'interfaccia WithCulture rimossi</span><span class="sxs-lookup"><span data-stu-id="22c98-113">Localization: ResourceManagerWithCultureStringLocalizer class and WithCulture interface member removed</span></span>](#localization-resourcemanagerwithculturestringlocalizer-class-and-withculture-interface-member-removed)
-- [<span data-ttu-id="22c98-114">SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x</span><span class="sxs-lookup"><span data-stu-id="22c98-114">SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package</span></span>](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
-- [<span data-ttu-id="22c98-115">SignalR: tipo di opzioni del protocollo dell'hub MessagePack modificato</span><span class="sxs-lookup"><span data-stu-id="22c98-115">SignalR: MessagePack Hub Protocol options type changed</span></span>](#signalr-messagepack-hub-protocol-options-type-changed)
-- [<span data-ttu-id="22c98-116">SignalR: Metodi UseSignalR e UseConnections rimossi</span><span class="sxs-lookup"><span data-stu-id="22c98-116">SignalR: UseSignalR and UseConnections methods removed</span></span>](#signalr-usesignalr-and-useconnections-methods-removed)
-- [<span data-ttu-id="22c98-117">File statici: tipo di contenuto CSV modificato in conforme agli standard</span><span class="sxs-lookup"><span data-stu-id="22c98-117">Static files: CSV content type changed to standards-compliant</span></span>](#static-files-csv-content-type-changed-to-standards-compliant)
+- [<span data-ttu-id="2a2b6-106">Azure: pacchetti di integrazione di Azure con prefisso Microsoft rimossi</span><span class="sxs-lookup"><span data-stu-id="2a2b6-106">Azure: Microsoft-prefixed Azure integration packages removed</span></span>](#azure-microsoft-prefixed-azure-integration-packages-removed)
+- [<span data-ttu-id="2a2b6-107">Estensioni: modifiche dei riferimenti al pacchetto che interessano alcuni pacchetti NuGet</span><span class="sxs-lookup"><span data-stu-id="2a2b6-107">Extensions: Package reference changes affecting some NuGet packages</span></span>](#extensions-package-reference-changes-affecting-some-nuget-packages)
+- [<span data-ttu-id="2a2b6-108">HTTP: HttpClient istanze create dai codici di stato IHttpClientFactory log Integer</span><span class="sxs-lookup"><span data-stu-id="2a2b6-108">HTTP: HttpClient instances created by IHttpClientFactory log integer status codes</span></span>](#http-httpclient-instances-created-by-ihttpclientfactory-log-integer-status-codes)
+- [<span data-ttu-id="2a2b6-109">Tipi HTTP: gheppio e IIS BadHttpRequestException contrassegnati come obsoleti e sostituiti</span><span class="sxs-lookup"><span data-stu-id="2a2b6-109">HTTP: Kestrel and IIS BadHttpRequestException types marked obsolete and replaced</span></span>](#http-kestrel-and-iis-badhttprequestexception-types-marked-obsolete-and-replaced)
+- [<span data-ttu-id="2a2b6-110">HttpSys: rinegoziazione certificato client disabilitata per impostazione predefinita</span><span class="sxs-lookup"><span data-stu-id="2a2b6-110">HttpSys: Client certificate renegotiation disabled by default</span></span>](#httpsys-client-certificate-renegotiation-disabled-by-default)
+- [<span data-ttu-id="2a2b6-111">IIS: vengono mantenute le stringhe di query del middleware UrlRewrite</span><span class="sxs-lookup"><span data-stu-id="2a2b6-111">IIS: UrlRewrite middleware query strings are preserved</span></span>](#iis-urlrewrite-middleware-query-strings-are-preserved)
+- [<span data-ttu-id="2a2b6-112">Gheppio: modifiche di configurazione in fase di esecuzione rilevate per impostazione predefinita</span><span class="sxs-lookup"><span data-stu-id="2a2b6-112">Kestrel: Configuration changes at run time detected by default</span></span>](#kestrel-configuration-changes-at-run-time-detected-by-default)
+- [<span data-ttu-id="2a2b6-113">Gheppio: versioni del protocollo TLS supportate predefinite modificate</span><span class="sxs-lookup"><span data-stu-id="2a2b6-113">Kestrel: Default supported TLS protocol versions changed</span></span>](#kestrel-default-supported-tls-protocol-versions-changed)
+- [<span data-ttu-id="2a2b6-114">Gheppio: HTTP/2 disabilitato su TLS in versioni incompatibili di Windows</span><span class="sxs-lookup"><span data-stu-id="2a2b6-114">Kestrel: HTTP/2 disabled over TLS on incompatible Windows versions</span></span>](#kestrel-http2-disabled-over-tls-on-incompatible-windows-versions)
+- [<span data-ttu-id="2a2b6-115">Localizzazione: API "Pubternal" rimosse</span><span class="sxs-lookup"><span data-stu-id="2a2b6-115">Localization: "Pubternal" APIs removed</span></span>](#localization-pubternal-apis-removed)
+- [<span data-ttu-id="2a2b6-116">Localizzazione: classe ResourceManagerWithCultureStringLocalizer e membro dell'interfaccia WithCulture rimossi</span><span class="sxs-lookup"><span data-stu-id="2a2b6-116">Localization: ResourceManagerWithCultureStringLocalizer class and WithCulture interface member removed</span></span>](#localization-resourcemanagerwithculturestringlocalizer-class-and-withculture-interface-member-removed)
+- [<span data-ttu-id="2a2b6-117">SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x</span><span class="sxs-lookup"><span data-stu-id="2a2b6-117">SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package</span></span>](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
+- [<span data-ttu-id="2a2b6-118">SignalR: tipo di opzioni del protocollo dell'hub MessagePack modificato</span><span class="sxs-lookup"><span data-stu-id="2a2b6-118">SignalR: MessagePack Hub Protocol options type changed</span></span>](#signalr-messagepack-hub-protocol-options-type-changed)
+- [<span data-ttu-id="2a2b6-119">SignalR: Metodi UseSignalR e UseConnections rimossi</span><span class="sxs-lookup"><span data-stu-id="2a2b6-119">SignalR: UseSignalR and UseConnections methods removed</span></span>](#signalr-usesignalr-and-useconnections-methods-removed)
+- [<span data-ttu-id="2a2b6-120">File statici: tipo di contenuto CSV modificato in conforme agli standard</span><span class="sxs-lookup"><span data-stu-id="2a2b6-120">Static files: CSV content type changed to standards-compliant</span></span>](#static-files-csv-content-type-changed-to-standards-compliant)
 
 [!INCLUDE[Azure: Microsoft-prefixed Azure integration packages removed](~/includes/core-changes/aspnetcore/5.0/azure-integration-packages-removed.md)]
 
@@ -44,11 +47,23 @@ ms.locfileid: "84803235"
 
 ***
 
+[!INCLUDE[HttpSys: Client certificate renegotiation disabled by default](~/includes/core-changes/aspnetcore/5.0/httpsys-client-certificate-renegotiation-disabled-by-default.md)]
+
+***
+
+[!INCLUDE[IIS: UrlRewrite middleware query strings are preserved](~/includes/core-changes/aspnetcore/5.0/iis-urlrewrite-middleware-query-strings-are-preserved.md)]
+
+***
+
 [!INCLUDE[Kestrel: Configuration changes at run time detected by default](~/includes/core-changes/aspnetcore/5.0/kestrel-configuration-changes-at-run-time-detected-by-default.md)]
 
 ***
 
 [!INCLUDE[Kestrel: Default supported TLS protocol versions changed](~/includes/core-changes/aspnetcore/5.0/kestrel-default-supported-tls-protocol-versions-changed.md)]
+
+***
+
+[!INCLUDE[Kestrel: HTTP/2 disabled over TLS on incompatible Windows versions](~/includes/core-changes/aspnetcore/5.0/kestrel-disables-http2-over-tls.md)]
 
 ***
 
@@ -76,10 +91,10 @@ ms.locfileid: "84803235"
 
 ***
 
-## <a name="core-net-libraries"></a><span data-ttu-id="22c98-118">Principali librerie .NET</span><span class="sxs-lookup"><span data-stu-id="22c98-118">Core .NET libraries</span></span>
+## <a name="core-net-libraries"></a><span data-ttu-id="2a2b6-121">Principali librerie .NET</span><span class="sxs-lookup"><span data-stu-id="2a2b6-121">Core .NET libraries</span></span>
 
-- [<span data-ttu-id="22c98-119">I metodi CompareGreaterThan SSE e SSE2 gestiscono correttamente gli input NaN</span><span class="sxs-lookup"><span data-stu-id="22c98-119">SSE and SSE2 CompareGreaterThan methods properly handle NaN inputs</span></span>](#sse-and-sse2-comparegreaterthan-methods-properly-handle-nan-inputs)
-- [<span data-ttu-id="22c98-120">Il contatore. CreateCounterSetInstance genera ora InvalidOperationException se l'istanza esiste già</span><span class="sxs-lookup"><span data-stu-id="22c98-120">CounterSet.CreateCounterSetInstance now throws InvalidOperationException if instance already exist</span></span>](#countersetcreatecountersetinstance-now-throws-invalidoperationexception-if-instance-already-exists)
+- [<span data-ttu-id="2a2b6-122">I metodi CompareGreaterThan SSE e SSE2 gestiscono correttamente gli input NaN</span><span class="sxs-lookup"><span data-stu-id="2a2b6-122">SSE and SSE2 CompareGreaterThan methods properly handle NaN inputs</span></span>](#sse-and-sse2-comparegreaterthan-methods-properly-handle-nan-inputs)
+- [<span data-ttu-id="2a2b6-123">Il contatore. CreateCounterSetInstance genera ora InvalidOperationException se l'istanza esiste già</span><span class="sxs-lookup"><span data-stu-id="2a2b6-123">CounterSet.CreateCounterSetInstance now throws InvalidOperationException if instance already exist</span></span>](#countersetcreatecountersetinstance-now-throws-invalidoperationexception-if-instance-already-exists)
 
 [!INCLUDE [sse-comparegreaterthan-intrinsics](../../../includes/core-changes/corefx/5.0/sse-comparegreaterthan-intrinsics.md)]
 
@@ -89,10 +104,10 @@ ms.locfileid: "84803235"
 
 ***
 
-## <a name="globalization"></a><span data-ttu-id="22c98-121">Globalizzazione</span><span class="sxs-lookup"><span data-stu-id="22c98-121">Globalization</span></span>
+## <a name="globalization"></a><span data-ttu-id="2a2b6-124">Globalizzazione</span><span class="sxs-lookup"><span data-stu-id="2a2b6-124">Globalization</span></span>
 
-- [<span data-ttu-id="22c98-122">StringInfo e TextElementEnumerator ora sono conformi a UAX29</span><span class="sxs-lookup"><span data-stu-id="22c98-122">StringInfo and TextElementEnumerator are now UAX29-compliant</span></span>](#stringinfo-and-textelementenumerator-are-now-uax29-compliant)
-- [<span data-ttu-id="22c98-123">API di globalizzazione usare le librerie ICU in Windows</span><span class="sxs-lookup"><span data-stu-id="22c98-123">Globalization APIs use ICU libraries on Windows</span></span>](#globalization-apis-use-icu-libraries-on-windows)
+- [<span data-ttu-id="2a2b6-125">StringInfo e TextElementEnumerator ora sono conformi a UAX29</span><span class="sxs-lookup"><span data-stu-id="2a2b6-125">StringInfo and TextElementEnumerator are now UAX29-compliant</span></span>](#stringinfo-and-textelementenumerator-are-now-uax29-compliant)
+- [<span data-ttu-id="2a2b6-126">API di globalizzazione usare le librerie ICU in Windows</span><span class="sxs-lookup"><span data-stu-id="2a2b6-126">Globalization APIs use ICU libraries on Windows</span></span>](#globalization-apis-use-icu-libraries-on-windows)
 
 [!INCLUDE [uax29-compliant-grapheme-enumeration](../../../includes/core-changes/globalization/5.0/uax29-compliant-grapheme-enumeration.md)]
 
@@ -102,12 +117,12 @@ ms.locfileid: "84803235"
 
 ***
 
-## <a name="windows-forms"></a><span data-ttu-id="22c98-124">Windows Forms</span><span class="sxs-lookup"><span data-stu-id="22c98-124">Windows Forms</span></span>
+## <a name="windows-forms"></a><span data-ttu-id="2a2b6-127">Windows Form</span><span class="sxs-lookup"><span data-stu-id="2a2b6-127">Windows Forms</span></span>
 
-- [<span data-ttu-id="22c98-125">Rimossi controlli barra di stato</span><span class="sxs-lookup"><span data-stu-id="22c98-125">Removed status bar controls</span></span>](#removed-status-bar-controls)
-- [<span data-ttu-id="22c98-126">I metodi WinForms ora generano ArgumentException</span><span class="sxs-lookup"><span data-stu-id="22c98-126">WinForms methods now throw ArgumentException</span></span>](#winforms-methods-now-throw-argumentexception)
-- [<span data-ttu-id="22c98-127">I metodi WinForms ora generano ArgumentNullException</span><span class="sxs-lookup"><span data-stu-id="22c98-127">WinForms methods now throw ArgumentNullException</span></span>](#winforms-methods-now-throw-argumentnullexception)
-- [<span data-ttu-id="22c98-128">Le proprietà di WinForms ora generano ArgumentOutOfRangeException</span><span class="sxs-lookup"><span data-stu-id="22c98-128">WinForms properties now throw ArgumentOutOfRangeException</span></span>](#winforms-properties-now-throw-argumentoutofrangeexception)
+- [<span data-ttu-id="2a2b6-128">Rimossi controlli barra di stato</span><span class="sxs-lookup"><span data-stu-id="2a2b6-128">Removed status bar controls</span></span>](#removed-status-bar-controls)
+- [<span data-ttu-id="2a2b6-129">I metodi WinForms ora generano ArgumentException</span><span class="sxs-lookup"><span data-stu-id="2a2b6-129">WinForms methods now throw ArgumentException</span></span>](#winforms-methods-now-throw-argumentexception)
+- [<span data-ttu-id="2a2b6-130">I metodi WinForms ora generano ArgumentNullException</span><span class="sxs-lookup"><span data-stu-id="2a2b6-130">WinForms methods now throw ArgumentNullException</span></span>](#winforms-methods-now-throw-argumentnullexception)
+- [<span data-ttu-id="2a2b6-131">Le proprietà di WinForms ora generano ArgumentOutOfRangeException</span><span class="sxs-lookup"><span data-stu-id="2a2b6-131">WinForms properties now throw ArgumentOutOfRangeException</span></span>](#winforms-properties-now-throw-argumentoutofrangeexception)
 
 [!INCLUDE [winforms-deprecated-controls](../../../includes/core-changes/windowsforms/5.0/winforms-deprecated-controls.md)]
 
