--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
 ms.date: 06/23/2020
-ms.openlocfilehash: 305477d3b7cf336af9ccefbd3cc504a4edcd655d
-ms.sourcegitcommit: dc2feef0794cf41dbac1451a13b8183258566c0e
+ms.openlocfilehash: 803b31bb136cbdd7c6ab8868d982d3c8223f5681
+ms.sourcegitcommit: 63bb83322814f5e5e5c5b69939b14a3139a6ca7e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 06/24/2020
-ms.locfileid: "85325232"
+ms.lasthandoff: 06/25/2020
+ms.locfileid: "85365648"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
@@ -95,12 +95,17 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 - [I metodi CompareGreaterThan SSE e SSE2 gestiscono correttamente gli input NaN](#sse-and-sse2-comparegreaterthan-methods-properly-handle-nan-inputs)
 - [Il contatore. CreateCounterSetInstance genera ora InvalidOperationException se l'istanza esiste già](#countersetcreatecountersetinstance-now-throws-invalidoperationexception-if-instance-already-exists)
+- [Pacchetto Microsoft. DotNet. PlatformAbstractions rimosso](#microsoftdotnetplatformabstractions-package-removed)
 
 [!INCLUDE [sse-comparegreaterthan-intrinsics](../../../includes/core-changes/corefx/5.0/sse-comparegreaterthan-intrinsics.md)]
 
 ***
 
 [!INCLUDE [createcountersetinstance-throws-invalidoperation](../../../includes/core-changes/corefx/5.0/createcountersetinstance-throws-invalidoperation.md)]
+
+***
+
+[!INCLUDE [platformabstractions-package-removed](../../../includes/core-changes/corefx/5.0/platformabstractions-package-removed.md)]
 
 ***
 
@@ -117,7 +122,15 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ***
 
-## <a name="windows-forms"></a>Windows Form
+## <a name="interop"></a>Interoperabilità
+
+- [Il supporto predefinito per WinRT è stato rimosso da .NET](#built-in-support-for-winrt-is-removed-from-net)
+
+[!INCLUDE [built-in-support-for-winrt-removed](~/includes/core-changes/interop/5.0/built-in-support-for-winrt-removed.md)]
+
+***
+
+## <a name="windows-forms"></a>Windows Forms
 
 - [Rimossi controlli barra di stato](#removed-status-bar-controls)
 - [I metodi WinForms ora generano ArgumentException](#winforms-methods-now-throw-argumentexception)
