--- a/docs/csharp/misc/cs0107.md
+++ b/docs/csharp/misc/cs0107.md
@@ -1,36 +1,31 @@
 ---
 title: Errore del compilatore CS0107
-ms.date: 07/20/2015
+ms.date: 07/04/2020
 f1_keywords:
 - CS0107
 helpviewer_keywords:
 - CS0107
 ms.assetid: 505763c5-6d68-4c57-a8bd-7b03682da4c5
-ms.openlocfilehash: c8a7a818a7ab9cfad4f7cf4f25a03538715bc044
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
-ms.translationtype: MT
+ms.openlocfilehash: abbe75e10426f39c8d923dbf0e359b0ac53007fe
+ms.sourcegitcommit: 0edbeb66d71b8df10fcb374cfca4d731b58ccdb2
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69605097"
+ms.lasthandoff: 07/07/2020
+ms.locfileid: "86051961"
 ---
 # <a name="compiler-error-cs0107"></a>Errore del compilatore CS0107
-Sono presenti più modificatori di protezione  
-  
- In un membro di classe è consentito solo un modificatore di accesso ([public](../language-reference/keywords/public.md), [private](../language-reference/keywords/private.md), [protected](../language-reference/keywords/protected.md)o [internal](../language-reference/keywords/internal.md)), con l'eccezione di **internal protected**.  
-  
- L'esempio seguente genera l'errore CS0107:  
-  
-```csharp  
-// CS0107.cs  
-public class C  
-{  
-   private internal void f()   // CS0107, delete private or internal  
-   {  
-   }  
-  
-   public static int Main()  
-   {  
-      return 1;  
-   }  
-}  
+
+Sono presenti più modificatori di protezione
+
+In un membro di classe è consentito solo un modificatore di accesso ([public](../language-reference/keywords/public.md), [private](../language-reference/keywords/private.md), [protected](../language-reference/keywords/protected.md)o [Internal](../language-reference/keywords/internal.md)), ad eccezione di Protected [**Internal**](../language-reference/keywords/protected-internal.md) e [**private protected**](../language-reference/keywords/private-protected.md).
+
+L'esempio seguente genera l'errore CS0107:
+
+```csharp
+// CS0107.cs
+public class C
+{
+    private internal void F()   // CS0107, delete private or internal
+    {
+    }
+}
 ```
