commit translated contents

--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,21 +1,22 @@
 ---
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
-ms.date: 06/23/2020
-ms.openlocfilehash: 803b31bb136cbdd7c6ab8868d982d3c8223f5681
-ms.sourcegitcommit: 63bb83322814f5e5e5c5b69939b14a3139a6ca7e
+ms.date: 07/08/2020
+ms.openlocfilehash: 8e50441b7562ebda88c6b64f83bcd372fb87cca8
+ms.sourcegitcommit: cb27c01a8b0b4630148374638aff4e2221f90b22
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 06/25/2020
-ms.locfileid: "85365648"
+ms.lasthandoff: 07/09/2020
+ms.locfileid: "86174264"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
 Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Core alla versione 5,0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.
 
-## <a name="aspnet-core"></a>ASP.NET Core
+## <a name="aspnet-core"></a>Risultato dell'azione di
 
 - [Azure: pacchetti di integrazione di Azure con prefisso Microsoft rimossi](#azure-microsoft-prefixed-azure-integration-packages-removed)
+- [Blazer: spazi vuoti non significativi rimossi dai componenti in fase di compilazione](#blazor-insignificant-whitespace-trimmed-from-components-at-compile-time)
 - [Estensioni: modifiche dei riferimenti al pacchetto che interessano alcuni pacchetti NuGet](#extensions-package-reference-changes-affecting-some-nuget-packages)
 - [HTTP: HttpClient istanze create dai codici di stato IHttpClientFactory log Integer](#http-httpclient-instances-created-by-ihttpclientfactory-log-integer-status-codes)
 - [Tipi HTTP: gheppio e IIS BadHttpRequestException contrassegnati come obsoleti e sostituiti](#http-kestrel-and-iis-badhttprequestexception-types-marked-obsolete-and-replaced)
@@ -32,6 +33,10 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 - [File statici: tipo di contenuto CSV modificato in conforme agli standard](#static-files-csv-content-type-changed-to-standards-compliant)
 
 [!INCLUDE[Azure: Microsoft-prefixed Azure integration packages removed](~/includes/core-changes/aspnetcore/5.0/azure-integration-packages-removed.md)]
+
+***
+
+[!INCLUDE[Blazor: Insignificant whitespace trimmed from components at compile time](~/includes/core-changes/aspnetcore/5.0/blazor-components-trim-insignificant-whitespace.md)]
 
 ***
 
