--- a/docs/whats-new/dotnet-2020-04.md
+++ b/docs/whats-new/dotnet-2020-04.md
@@ -1,13 +1,15 @@
 ---
 title: 'Documenti .NET: novità di aprile 2020'
 description: Novità di .NET docs per il 2020 aprile.
+no-loc:
+- Blazor
 ms.date: 04/27/2020
-ms.openlocfilehash: 47006165f7afdad5eea84196f7da3c23e3c4baae
-ms.sourcegitcommit: 1cb64b53eb1f253e6a3f53ca9510ef0be1fd06fe
+ms.openlocfilehash: 969c566deeb178d3291436c9831bcf296cd0854f
+ms.sourcegitcommit: cb27c01a8b0b4630148374638aff4e2221f90b22
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2020
-ms.locfileid: "82515259"
+ms.lasthandoff: 07/09/2020
+ms.locfileid: "86174192"
 ---
 # <a name="net-docs-whats-new-for-april-2020"></a>Documenti .NET: novità di aprile 2020
 
@@ -21,7 +23,7 @@ Introduzione alle novità di .NET docs per il 2020 aprile. Questo articolo elenc
 
 ### <a name="updated-articles"></a>Articoli aggiornati
 
-- [Configurazione app-configurazione](../architecture/blazor-for-web-forms-developers/config.md) eBook Blazer
+- [App configuration](../architecture/blazor-for-web-forms-developers/config.md)  -  Configurazione Blazor dell'app configurazione eBook
 
 ## <a name="net-core"></a>.NET Core
 
@@ -41,7 +43,7 @@ Introduzione alle novità di .NET docs per il 2020 aprile. Questo articolo elenc
 
 ### <a name="updated-articles"></a>Articoli aggiornati
 
-- [La cronologia di C\# ](../csharp/whats-new/csharp-version-history.md) -aggiungere descrizioni della versione del linguaggio recenti
+- [Cronologia di C \# ](../csharp/whats-new/csharp-version-history.md) -Aggiungi descrizioni versioni recenti del linguaggio
 - [Tipi di struttura (riferimenti al linguaggio)](../csharp/language-reference/builtin-types/struct.md) -aggiungere struct Ref, consolidare altre discussioni sugli struct
 
 ## <a name="net-core-desktop"></a>Desktop di .NET Core
