--- a/docs/whats-new/2020-06.md
+++ b/docs/whats-new/2020-06.md
@@ -1,13 +1,15 @@
 ---
 title: 'Documenti .NET: novità del 2020 giugno'
 description: Novità della documentazione di .NET per il 2020 giugno.
+no-loc:
+- Blazor
 ms.date: 06/30/2020
-ms.openlocfilehash: d62ea99f8f61996236a6e2f485777470ddb95ab5
-ms.sourcegitcommit: b6a1869f97a37f11a68c90afde1a520a6887dcbc
+ms.openlocfilehash: 88b1ed4e2c945599974e1b11a73c6316019a77a1
+ms.sourcegitcommit: cb27c01a8b0b4630148374638aff4e2221f90b22
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/02/2020
-ms.locfileid: "85854041"
+ms.lasthandoff: 07/09/2020
+ms.locfileid: "86174205"
 ---
 # <a name="net-docs-whats-new-for-june-2020"></a>Documenti .NET: novità del 2020 giugno
 
@@ -17,7 +19,7 @@ Introduzione alle novità di .NET docs per il 2020 giugno. Questo articolo elenc
 
 ### <a name="updated-articles"></a>Articoli aggiornati
 
-- [Usare](/dotnet/architecture/blazor-for-web-forms-developers/data) l'eBook data-Blazer-capitolo dati
+- [Usare i dati](/dotnet/architecture/blazor-for-web-forms-developers/data)  -  Blazor eBook-capitolo dati
 
 ## <a name="net-core"></a>.NET Core
 
