commit translated contents

--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,19 +1,19 @@
 ---
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
-ms.date: 07/08/2020
-ms.openlocfilehash: 8e50441b7562ebda88c6b64f83bcd372fb87cca8
-ms.sourcegitcommit: cb27c01a8b0b4630148374638aff4e2221f90b22
+ms.date: 07/10/2020
+ms.openlocfilehash: 4340cdf083c7fff684ac0d684535f76c9bf970b8
+ms.sourcegitcommit: 97ce5363efa88179dd76e09de0103a500ca9b659
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/09/2020
-ms.locfileid: "86174264"
+ms.lasthandoff: 07/13/2020
+ms.locfileid: "86281341"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
 Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Core alla versione 5,0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.
 
-## <a name="aspnet-core"></a>Risultato dell'azione di
+## <a name="aspnet-core"></a>ASP.NET Core
 
 - [Azure: pacchetti di integrazione di Azure con prefisso Microsoft rimossi](#azure-microsoft-prefixed-azure-integration-packages-removed)
 - [Blazer: spazi vuoti non significativi rimossi dai componenti in fase di compilazione](#blazor-insignificant-whitespace-trimmed-from-components-at-compile-time)
@@ -26,6 +26,7 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 - [Gheppio: versioni del protocollo TLS supportate predefinite modificate](#kestrel-default-supported-tls-protocol-versions-changed)
 - [Gheppio: HTTP/2 disabilitato su TLS in versioni incompatibili di Windows](#kestrel-http2-disabled-over-tls-on-incompatible-windows-versions)
 - [Localizzazione: API "Pubternal" rimosse](#localization-pubternal-apis-removed)
+- [Localizzazione: Costruttore obsoleto rimosso nel middleware di localizzazione della richiesta](#localization-obsolete-constructor-removed-in-request-localization-middleware)
 - [Localizzazione: classe ResourceManagerWithCultureStringLocalizer e membro dell'interfaccia WithCulture rimossi](#localization-resourcemanagerwithculturestringlocalizer-class-and-withculture-interface-member-removed)
 - [SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
 - [SignalR: tipo di opzioni del protocollo dell'hub MessagePack modificato](#signalr-messagepack-hub-protocol-options-type-changed)
@@ -76,6 +77,10 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ***
 
+[!INCLUDE[Localization: Obsolete constructor removed in request localization middleware](~/includes/core-changes/aspnetcore/5.0/localization-requestlocalizationmiddleware-constructor-removed.md)]
+
+***
+
 [!INCLUDE[Localization: ResourceManagerWithCultureStringLocalizer class and WithCulture interface member removed](~/includes/core-changes/aspnetcore/5.0/localization-members-removed.md)]
 
 ***
@@ -98,9 +103,19 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ## <a name="core-net-libraries"></a>Principali librerie .NET
 
+- [Il valore predefinito di ActivityIdFormat è W3C](#default-activityidformat-is-w3c)
+- [Modifica del comportamento per Vector2. Lerp e Vector4. Lerp](#behavior-change-for-vector2lerp-and-vector4lerp)
 - [I metodi CompareGreaterThan SSE e SSE2 gestiscono correttamente gli input NaN](#sse-and-sse2-comparegreaterthan-methods-properly-handle-nan-inputs)
 - [Il contatore. CreateCounterSetInstance genera ora InvalidOperationException se l'istanza esiste già](#countersetcreatecountersetinstance-now-throws-invalidoperationexception-if-instance-already-exists)
 - [Pacchetto Microsoft. DotNet. PlatformAbstractions rimosso](#microsoftdotnetplatformabstractions-package-removed)
+
+[!INCLUDE [default-activityidformat-changed](../../../includes/core-changes/corefx/5.0/default-activityidformat-changed.md)]
+
+***
+
+[!INCLUDE [vector-lerp-behavior-change](../../../includes/core-changes/corefx/5.0/vector-lerp-behavior-change.md)]
+
+***
 
 [!INCLUDE [sse-comparegreaterthan-intrinsics](../../../includes/core-changes/corefx/5.0/sse-comparegreaterthan-intrinsics.md)]
 
@@ -135,7 +150,7 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ***
 
-## <a name="windows-forms"></a>Windows Forms
+## <a name="windows-forms"></a>Windows Form
 
 - [Rimossi controlli barra di stato](#removed-status-bar-controls)
 - [I metodi WinForms ora generano ArgumentException](#winforms-methods-now-throw-argumentexception)
