commit translated contents

--- a/docs/csharp/misc/cs1935.md
+++ b/docs/csharp/misc/cs1935.md
@@ -6,45 +6,47 @@ f1_keywords:
 helpviewer_keywords:
 - CS1935
 ms.assetid: d5dda801-fbf3-4340-bfe1-f9409f2d344d
-ms.openlocfilehash: f95d1ee9c3e4564b897d2c412da3ee7bf076c174
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: 063584d6ef20527a6cb97518912af3b17efee4b7
+ms.sourcegitcommit: e7748001b1cee80ced691d8a76ca814c0b02dd9b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69598572"
+ms.lasthandoff: 07/14/2020
+ms.locfileid: "86374455"
 ---
 # <a name="compiler-error-cs1935"></a>Errore del compilatore CS1935
-Non è stata trovata un'implementazione del modello di query per il tipo di origine 'type'. 'method' non è presente. Probabilmente manca un riferimento a 'System.Core.dll' o una direttiva using per 'System.Linq'.  
-  
- Il tipo di origine in una query deve essere `IEnumerable`, `IEnumerable<T>`o un tipo derivato o un tipo per cui qualcuno ha implementato gli operatori query standard. Se il tipo di origine è un `IEnumerable` o `IEnumerable<T>`, è necessario aggiungere un riferimento a system.core.dll e una direttiva `using` per lo spazio dei nomi System.Linq per portare i metodi di estensione degli operatori query standard nell'ambito. Le implementazioni personalizzate degli operatori query standard devono essere incluse nell'ambito nello stesso modo, con una direttiva `using` e, se necessario, un riferimento all'assembly.  
-  
-## <a name="to-correct-this-error"></a>Per correggere l'errore  
-  
-1. Aggiungere le direttive using e riferimenti necessari al progetto.  
-  
-## <a name="example"></a>Esempio  
- Il codice seguente viene generato l'errore CS1935 perché la direttiva `using` per System.Linq è impostata come commento:  
-  
-```csharp  
-// cs1935.cs  
-// CS1935  
-using System;  
-using System.Collections.Generic;  
-// using System.Linq;  
-  
-class Test  
-{  
-    static int Main()  
-    {  
-        int[] nums = {0,1,2,3,4,5};  
-        IEnumerable<int> e = from n in nums  
-                        where n > 3  
-                        select n;  
-        return 0;  
-    }  
-}  
-```  
-  
+
+Non è stata trovata un'implementazione del modello di query per il tipo di origine 'type'. 'method' non è presente. Manca una direttiva using per ' System. Linq '?
+
+Il tipo di origine in una query deve essere `IEnumerable`, `IEnumerable<T>`o un tipo derivato o un tipo per cui qualcuno ha implementato gli operatori query standard. Se il tipo di origine è `IEnumerable` o `IEnumerable<T>` , è necessario aggiungere una `using` direttiva per lo `System.Linq` spazio dei nomi per portare i metodi di estensione degli operatori di query standard nell'ambito. Le implementazioni personalizzate degli operatori query standard devono essere incluse nell'ambito nello stesso modo, con una direttiva `using` e, se necessario, un riferimento all'assembly.
+
+## <a name="to-correct-this-error"></a>Per correggere l'errore
+
+Aggiungere le direttive using e riferimenti necessari al progetto.
+
+## <a name="example"></a>Esempio
+
+Il codice seguente viene generato l'errore CS1935 perché la direttiva `using` per System.Linq è impostata come commento:
+
+```csharp
+// cs1935.cs
+// CS1935
+using System;
+using System.Collections.Generic;
+// using System.Linq;
+
+class Test
+{
+    static int Main()
+    {
+        int[] nums = { 0,1,2,3,4,5 };
+        IEnumerable<int> e = from n in nums
+                        where n > 3
+                        select n;
+        return 0;
+    }
+}
+```
+
 ## <a name="see-also"></a>Vedere anche
 
 - [Cenni preliminari sugli operatori di query standard](../programming-guide/concepts/linq/standard-query-operators-overview.md)
