--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,13 +1,13 @@
 ---
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
-ms.date: 07/10/2020
-ms.openlocfilehash: 4340cdf083c7fff684ac0d684535f76c9bf970b8
-ms.sourcegitcommit: 97ce5363efa88179dd76e09de0103a500ca9b659
+ms.date: 07/13/2020
+ms.openlocfilehash: 64f00b7098392b297911f8538ef5d80f464f6c9c
+ms.sourcegitcommit: 0fa2b7b658bf137e813a7f4d09589d64c148ebf5
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/13/2020
-ms.locfileid: "86281341"
+ms.lasthandoff: 07/14/2020
+ms.locfileid: "86309152"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
@@ -28,6 +28,7 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 - [Localizzazione: API "Pubternal" rimosse](#localization-pubternal-apis-removed)
 - [Localizzazione: Costruttore obsoleto rimosso nel middleware di localizzazione della richiesta](#localization-obsolete-constructor-removed-in-request-localization-middleware)
 - [Localizzazione: classe ResourceManagerWithCultureStringLocalizer e membro dell'interfaccia WithCulture rimossi](#localization-resourcemanagerwithculturestringlocalizer-class-and-withculture-interface-member-removed)
+- [Sicurezza: IdentityModel versioni del pacchetto NuGet aggiornate](#security-identitymodel-nuget-package-versions-updated)
 - [SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
 - [SignalR: tipo di opzioni del protocollo dell'hub MessagePack modificato](#signalr-messagepack-hub-protocol-options-type-changed)
 - [SignalR: Metodi UseSignalR e UseConnections rimossi](#signalr-usesignalr-and-useconnections-methods-removed)
@@ -82,6 +83,10 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 ***
 
 [!INCLUDE[Localization: ResourceManagerWithCultureStringLocalizer class and WithCulture interface member removed](~/includes/core-changes/aspnetcore/5.0/localization-members-removed.md)]
+
+***
+
+[!INCLUDE[Security: IdentityModel NuGet package versions updated](~/includes/core-changes/aspnetcore/5.0/security-identitymodel-nuget-package-versions-updated.md)]
 
 ***
 
