--- a/docs/whats-new/dotnet-2020-05.md
+++ b/docs/whats-new/dotnet-2020-05.md
@@ -2,12 +2,12 @@
 title: 'Documenti .NET: novità per il 2020 maggio'
 description: Novità di .NET docs per il 2020 maggio.
 ms.date: 06/01/2020
-ms.openlocfilehash: 05a5b9b33fa68f24cfadfdca1363bce2c2e4b2f3
-ms.sourcegitcommit: 358a28048f36a8dca39a9fe6e6ac1f1913acadd5
+ms.openlocfilehash: 8f94bfff38bf1742289a413cbaa96f2e4a7b4f24
+ms.sourcegitcommit: e7748001b1cee80ced691d8a76ca814c0b02dd9b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 06/23/2020
-ms.locfileid: "85247817"
+ms.lasthandoff: 07/14/2020
+ms.locfileid: "86374429"
 ---
 # <a name="net-docs-whats-new-for-may-2020"></a>Documenti .NET: novità per il 2020 maggio
 
@@ -91,7 +91,7 @@ I seguenti utenti hanno contribuito alla documentazione di .NET nel 2020 maggio.
 - più rifinita [(2](https://github.com/kosist) )
 - [moerwald](https://github.com/moerwald) (2)
 - [shchauh-](https://github.com/shchauh)
-- [shonmisic](https://github.com/shonmisic) -Nenad Misic (2)
+- shonmisic-Nenad Misic (2)
 - [akpath](https://github.com/akpath) (1)
 - [AlexZazu](https://github.com/AlexZazu) -Alejandro zazueta (1)
 - [alistairjevans](https://github.com/alistairjevans) -Alistair Evans (1)
