commit bilingual contents

--- a/docs/csharp/misc/cs1935.md
+++ b/docs/csharp/misc/cs1935.md
@@ -6,45 +6,47 @@ f1_keywords:
 helpviewer_keywords:
 - CS1935
 ms.assetid: d5dda801-fbf3-4340-bfe1-f9409f2d344d
-ms.openlocfilehash: f95d1ee9c3e4564b897d2c412da3ee7bf076c174
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: 063584d6ef20527a6cb97518912af3b17efee4b7
+ms.sourcegitcommit: e7748001b1cee80ced691d8a76ca814c0b02dd9b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69598572"
+ms.lasthandoff: 07/14/2020
+ms.locfileid: "86374455"
 ---
-# <a name="compiler-error-cs1935"></a><span data-ttu-id="81c48-102">Errore del compilatore CS1935</span><span class="sxs-lookup"><span data-stu-id="81c48-102">Compiler Error CS1935</span></span>
-<span data-ttu-id="81c48-103">Non è stata trovata un'implementazione del modello di query per il tipo di origine 'type'.</span><span class="sxs-lookup"><span data-stu-id="81c48-103">Could not find an implementation of the query pattern for source type 'type'.</span></span> <span data-ttu-id="81c48-104">'method' non è presente.</span><span class="sxs-lookup"><span data-stu-id="81c48-104">'method' not found.</span></span> <span data-ttu-id="81c48-105">Probabilmente manca un riferimento a 'System.Core.dll' o una direttiva using per 'System.Linq'.</span><span class="sxs-lookup"><span data-stu-id="81c48-105">Are you missing a reference to 'System.Core.dll' or a using directive for 'System.Linq'?</span></span>  
-  
- <span data-ttu-id="81c48-106">Il tipo di origine in una query deve essere `IEnumerable`, `IEnumerable<T>`o un tipo derivato o un tipo per cui qualcuno ha implementato gli operatori query standard.</span><span class="sxs-lookup"><span data-stu-id="81c48-106">The source type in a query must be `IEnumerable`, `IEnumerable<T>`, or a derived type, or a type for which you or someone else has implemented the standard query operators.</span></span> <span data-ttu-id="81c48-107">Se il tipo di origine è un `IEnumerable` o `IEnumerable<T>`, è necessario aggiungere un riferimento a system.core.dll e una direttiva `using` per lo spazio dei nomi System.Linq per portare i metodi di estensione degli operatori query standard nell'ambito.</span><span class="sxs-lookup"><span data-stu-id="81c48-107">If the source type is an `IEnumerable` or `IEnumerable<T>`, you must add a reference to system.core.dll and a `using` directive for the System.Linq namespace in order to bring the standard query operator extension methods into scope.</span></span> <span data-ttu-id="81c48-108">Le implementazioni personalizzate degli operatori query standard devono essere incluse nell'ambito nello stesso modo, con una direttiva `using` e, se necessario, un riferimento all'assembly.</span><span class="sxs-lookup"><span data-stu-id="81c48-108">Custom implementations of the standard query operators must be brought into scope in the same way, with a `using` directive and, if necessary, a reference to the assembly.</span></span>  
-  
-## <a name="to-correct-this-error"></a><span data-ttu-id="81c48-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="81c48-109">To correct this error</span></span>  
-  
-1. <span data-ttu-id="81c48-110">Aggiungere le direttive using e riferimenti necessari al progetto.</span><span class="sxs-lookup"><span data-stu-id="81c48-110">Add the required using directives and references to the project.</span></span>  
-  
-## <a name="example"></a><span data-ttu-id="81c48-111">Esempio</span><span class="sxs-lookup"><span data-stu-id="81c48-111">Example</span></span>  
- <span data-ttu-id="81c48-112">Il codice seguente viene generato l'errore CS1935 perché la direttiva `using` per System.Linq è impostata come commento:</span><span class="sxs-lookup"><span data-stu-id="81c48-112">The following code generates CS1935 because the `using` directive for System.Linq is commented out:</span></span>  
-  
-```csharp  
-// cs1935.cs  
-// CS1935  
-using System;  
-using System.Collections.Generic;  
-// using System.Linq;  
-  
-class Test  
-{  
-    static int Main()  
-    {  
-        int[] nums = {0,1,2,3,4,5};  
-        IEnumerable<int> e = from n in nums  
-                        where n > 3  
-                        select n;  
-        return 0;  
-    }  
-}  
-```  
-  
-## <a name="see-also"></a><span data-ttu-id="81c48-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="81c48-113">See also</span></span>
+# <a name="compiler-error-cs1935"></a><span data-ttu-id="2aea3-102">Errore del compilatore CS1935</span><span class="sxs-lookup"><span data-stu-id="2aea3-102">Compiler Error CS1935</span></span>
 
-- [<span data-ttu-id="81c48-114">Cenni preliminari sugli operatori di query standard</span><span class="sxs-lookup"><span data-stu-id="81c48-114">Standard Query Operators Overview</span></span>](../programming-guide/concepts/linq/standard-query-operators-overview.md)
+<span data-ttu-id="2aea3-103">Non è stata trovata un'implementazione del modello di query per il tipo di origine 'type'.</span><span class="sxs-lookup"><span data-stu-id="2aea3-103">Could not find an implementation of the query pattern for source type 'type'.</span></span> <span data-ttu-id="2aea3-104">'method' non è presente.</span><span class="sxs-lookup"><span data-stu-id="2aea3-104">'method' not found.</span></span> <span data-ttu-id="2aea3-105">Manca una direttiva using per ' System. Linq '?</span><span class="sxs-lookup"><span data-stu-id="2aea3-105">Are you missing a using directive for 'System.Linq'?</span></span>
+
+<span data-ttu-id="2aea3-106">Il tipo di origine in una query deve essere `IEnumerable`, `IEnumerable<T>`o un tipo derivato o un tipo per cui qualcuno ha implementato gli operatori query standard.</span><span class="sxs-lookup"><span data-stu-id="2aea3-106">The source type in a query must be `IEnumerable`, `IEnumerable<T>`, or a derived type, or a type for which you or someone else has implemented the standard query operators.</span></span> <span data-ttu-id="2aea3-107">Se il tipo di origine è `IEnumerable` o `IEnumerable<T>` , è necessario aggiungere una `using` direttiva per lo `System.Linq` spazio dei nomi per portare i metodi di estensione degli operatori di query standard nell'ambito.</span><span class="sxs-lookup"><span data-stu-id="2aea3-107">If the source type is an `IEnumerable` or `IEnumerable<T>`, you must add a `using` directive for the `System.Linq` namespace in order to bring the standard query operator extension methods into scope.</span></span> <span data-ttu-id="2aea3-108">Le implementazioni personalizzate degli operatori query standard devono essere incluse nell'ambito nello stesso modo, con una direttiva `using` e, se necessario, un riferimento all'assembly.</span><span class="sxs-lookup"><span data-stu-id="2aea3-108">Custom implementations of the standard query operators must be brought into scope in the same way, with a `using` directive and, if necessary, a reference to the assembly.</span></span>
+
+## <a name="to-correct-this-error"></a><span data-ttu-id="2aea3-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2aea3-109">To correct this error</span></span>
+
+<span data-ttu-id="2aea3-110">Aggiungere le direttive using e riferimenti necessari al progetto.</span><span class="sxs-lookup"><span data-stu-id="2aea3-110">Add the required using directives and references to the project.</span></span>
+
+## <a name="example"></a><span data-ttu-id="2aea3-111">Esempio</span><span class="sxs-lookup"><span data-stu-id="2aea3-111">Example</span></span>
+
+<span data-ttu-id="2aea3-112">Il codice seguente viene generato l'errore CS1935 perché la direttiva `using` per System.Linq è impostata come commento:</span><span class="sxs-lookup"><span data-stu-id="2aea3-112">The following code generates CS1935 because the `using` directive for System.Linq is commented out:</span></span>
+
+```csharp
+// cs1935.cs
+// CS1935
+using System;
+using System.Collections.Generic;
+// using System.Linq;
+
+class Test
+{
+    static int Main()
+    {
+        int[] nums = { 0,1,2,3,4,5 };
+        IEnumerable<int> e = from n in nums
+                        where n > 3
+                        select n;
+        return 0;
+    }
+}
+```
+
+## <a name="see-also"></a><span data-ttu-id="2aea3-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2aea3-113">See also</span></span>
+
+- [<span data-ttu-id="2aea3-114">Cenni preliminari sugli operatori di query standard</span><span class="sxs-lookup"><span data-stu-id="2aea3-114">Standard Query Operators Overview</span></span>](../programming-guide/concepts/linq/standard-query-operators-overview.md)
