commit translated contents

--- a/docs/framework/migration-guide/retargeting/4.0-4.5.2.md
+++ b/docs/framework/migration-guide/retargeting/4.0-4.5.2.md
@@ -1,14 +1,15 @@
 ---
 title: Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.5.2
+description: Trovare informazioni sui problemi di compatibilità delle applicazioni che potrebbero incidere sull'app durante la migrazione da .NET Framework 4,0 a 4.5.2.
 ms.date: 07/10/2019
 ms.assetid: d2cf229c-fbb9-4b61-a116-3df21f505fde
 author: chlowell
-ms.openlocfilehash: 71b85b7f44e62a859df8ee328e696a0ef000133e
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 68143edd51da498fd39acbff31b0a2235ae1d552
+ms.sourcegitcommit: 2543a78be6e246aa010a01decf58889de53d1636
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/15/2020
-ms.locfileid: "85621457"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86444469"
 ---
 # <a name="retargeting-changes-for-migration-from-net-framework-40-to-452"></a>Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.5.2
 
@@ -32,7 +33,7 @@ Per problemi di compatibilità delle applicazioni che potrebbero incidere sull'a
 
 [!INCLUDE[Apps published with ClickOnce that use a SHA-256 code-signing certificate may fail on Windows 2003](~/includes/migration-guide/retargeting/clickonce/apps-published-with-clickonce-that-use-sha-256-code-signing-certificate-may.md)]
 
-## <a name="core"></a>Base
+## <a name="core"></a>Core
 
 [!INCLUDE[Foreach iterator variable is now scoped within the iteration, so closure capturing semantics are different (in C#5)](~/includes/migration-guide/retargeting/core/foreach-iterator-variable-now-scoped-within-iteration-so-closure-capturing.md)]
 
