--- a/docs/framework/migration-guide/retargeting/4.0-4.6.1.md
+++ b/docs/framework/migration-guide/retargeting/4.0-4.6.1.md
@@ -1,14 +1,15 @@
 ---
 title: Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.6.1
+description: Trovare informazioni sui problemi di compatibilità delle applicazioni che potrebbero incidere sull'app durante la migrazione da .NET Framework 4,0 a 4.6.1.
 ms.date: 07/10/2019
 ms.assetid: e18ad740-b6ea-403e-b93d-433901d6ca34
 author: chlowell
-ms.openlocfilehash: d95968b35e33c512fdd1c6f910650d5fbcefb8b8
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 36c1e131a65414dafb5d3d9c52bd96c318147593
+ms.sourcegitcommit: 2543a78be6e246aa010a01decf58889de53d1636
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/15/2020
-ms.locfileid: "85620976"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86444417"
 ---
 # <a name="retargeting-changes-for-migration-from-net-framework-40-to-461"></a>Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.6.1
 
@@ -34,7 +35,7 @@ Per problemi di compatibilità delle applicazioni che potrebbero incidere sull'a
 
 [!INCLUDE[ClickOnce supports SHA-256 on 4.0-targeted apps](~/includes/migration-guide/retargeting/clickonce/clickonce-supports-sha-256-on-40-targeted-apps.md)]
 
-## <a name="core"></a>Base
+## <a name="core"></a>Core
 
 [!INCLUDE[Change in path separator character in FullName property of ZipArchiveEntry objects](~/includes/migration-guide/retargeting/core/change-path-separator-character-fullname-property-ziparchiveentry-objects.md)]
 
