--- a/docs/framework/migration-guide/retargeting/4.0-4.5.1.md
+++ b/docs/framework/migration-guide/retargeting/4.0-4.5.1.md
@@ -1,14 +1,15 @@
 ---
 title: Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.5.1
+description: Trovare informazioni sui problemi di compatibilità delle applicazioni che potrebbero incidere sull'app durante la migrazione da .NET Framework 4,0 a 4.5.1.
 ms.date: 07/10/2019
 ms.assetid: 146b259c-ee72-4440-b498-e0cd3b3fc884
 author: chlowell
-ms.openlocfilehash: 13f0485518356dbf544c1734a49351d788ce6881
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 86908b9ea56e25bf5f67ff9fa38afb86b2aa4f55
+ms.sourcegitcommit: 2543a78be6e246aa010a01decf58889de53d1636
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/15/2020
-ms.locfileid: "85621470"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86444456"
 ---
 # <a name="retargeting-changes-for-migration-from-net-framework-40-to-451"></a>Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.5.1
 
@@ -32,7 +33,7 @@ Per problemi di compatibilità delle applicazioni che potrebbero incidere sull'a
 
 [!INCLUDE[Apps published with ClickOnce that use a SHA-256 code-signing certificate may fail on Windows 2003](~/includes/migration-guide/retargeting/clickonce/apps-published-with-clickonce-that-use-sha-256-code-signing-certificate-may.md)]
 
-## <a name="core"></a>Base
+## <a name="core"></a>Core
 
 [!INCLUDE[Foreach iterator variable is now scoped within the iteration, so closure capturing semantics are different (in C#5)](~/includes/migration-guide/retargeting/core/foreach-iterator-variable-now-scoped-within-iteration-so-closure-capturing.md)]
 
