--- a/docs/framework/migration-guide/retargeting/4.0-4.6.2.md
+++ b/docs/framework/migration-guide/retargeting/4.0-4.6.2.md
@@ -1,14 +1,15 @@
 ---
 title: Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.6.2
+description: Trovare informazioni sui problemi di compatibilità delle applicazioni che potrebbero incidere sull'app durante la migrazione da .NET Framework 4,0 a 4.6.2.
 ms.date: 07/10/2019
 ms.assetid: 33dbefd5-537c-4070-b7e9-1efa07c0e502
 author: chlowell
-ms.openlocfilehash: e7a77366ac1c5dc30aea0342bb6eadb9a7dc763c
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: ba0b1192f8d320a49e1166c7bab51a73f6fa9192
+ms.sourcegitcommit: 2543a78be6e246aa010a01decf58889de53d1636
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/15/2020
-ms.locfileid: "85617534"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86444430"
 ---
 # <a name="retargeting-changes-for-migration-from-net-framework-40-to-462"></a>Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.6.2
 
@@ -36,7 +37,7 @@ Per problemi di compatibilità delle applicazioni che potrebbero incidere sull'a
 
 [!INCLUDE[ClickOnce supports SHA-256 on 4.0-targeted apps](~/includes/migration-guide/retargeting/clickonce/clickonce-supports-sha-256-on-40-targeted-apps.md)]
 
-## <a name="core"></a>Base
+## <a name="core"></a>Core
 
 [!INCLUDE[AesCryptoServiceProvider decryptor provides a reusable transform](~/includes/migration-guide/retargeting/core/aescryptoserviceprovider-decryptor-provides-reusable-transform.md)]
 
