--- a/docs/framework/migration-guide/retargeting/4.0-4.6.md
+++ b/docs/framework/migration-guide/retargeting/4.0-4.6.md
@@ -1,14 +1,15 @@
 ---
 title: Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.6
+description: Trovare informazioni sui problemi di compatibilità delle applicazioni che potrebbero incidere sull'app durante la migrazione da .NET Framework 4,0 a 4,6.
 ms.date: 07/10/2019
 ms.assetid: 6ec1705f-5fd3-43a0-91a1-c5cb6021a188
 author: chlowell
-ms.openlocfilehash: f94bc56f8093a69deb1c25e0c63c5727782cadf2
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 0255631bcb2559b8760593b8029465766b1a9add
+ms.sourcegitcommit: 2543a78be6e246aa010a01decf58889de53d1636
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/15/2020
-ms.locfileid: "85617153"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86444391"
 ---
 # <a name="retargeting-changes-for-migration-from-net-framework-40-to-46"></a>Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.6
 
@@ -34,7 +35,7 @@ Per problemi di compatibilità delle applicazioni che potrebbero incidere sull'a
 
 [!INCLUDE[ClickOnce supports SHA-256 on 4.0-targeted apps](~/includes/migration-guide/retargeting/clickonce/clickonce-supports-sha-256-on-40-targeted-apps.md)]
 
-## <a name="core"></a>Base
+## <a name="core"></a>Core
 
 [!INCLUDE[CurrentCulture and CurrentUICulture flow across tasks](~/includes/migration-guide/retargeting/core/currentculture-currentuiculture-flow-across-tasks.md)]
 
