--- a/docs/framework/migration-guide/retargeting/4.0-4.7.1.md
+++ b/docs/framework/migration-guide/retargeting/4.0-4.7.1.md
@@ -1,14 +1,15 @@
 ---
 title: Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.7.1
+description: Trovare informazioni sui problemi di compatibilità delle applicazioni che potrebbero incidere sull'app durante la migrazione da .NET Framework 4,0 a 4.7.1.
 ms.date: 07/10/2019
 ms.assetid: 922946d1-d173-45b4-b655-96596e1cb86a
 author: chlowell
-ms.openlocfilehash: 979bb97f410f261b9e0f482f943a5aae047ff498
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 7229efe71191a8372005de2679707251df52634a
+ms.sourcegitcommit: 2543a78be6e246aa010a01decf58889de53d1636
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/15/2020
-ms.locfileid: "85622705"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86444404"
 ---
 # <a name="retargeting-changes-for-migration-from-net-framework-40-to-471"></a>Modifiche di reindirizzamento per la migrazione da .NET Framework 4.0 a 4.7.1
 
@@ -38,7 +39,7 @@ Per problemi di compatibilità delle applicazioni che potrebbero incidere sull'a
 
 [!INCLUDE[ClickOnce supports SHA-256 on 4.0-targeted apps](~/includes/migration-guide/retargeting/clickonce/clickonce-supports-sha-256-on-40-targeted-apps.md)]
 
-## <a name="core"></a>Base
+## <a name="core"></a>Core
 
 [!INCLUDE[AesCryptoServiceProvider decryptor provides a reusable transform](~/includes/migration-guide/retargeting/core/aescryptoserviceprovider-decryptor-provides-reusable-transform.md)]
 
